test: fix SqlSelectTest
change accountId to account_id